deployment: Lambda to copy original AMIs in OpenVidu PRO. Better way to setup OpenVidu Security groups in Cloudformation. Remove media nodes on destroy cloudformation using Lambda"

--- a/openvidu-server/deployments/ce/aws/CF-OpenVidu.yaml.template
+++ b/openvidu-server/deployments/ce/aws/CF-OpenVidu.yaml.template
@@ -486,7 +486,7 @@ Resources:
               public_ami_filter = [{ 'Name': 'image-id', 'Values': [ source_image_id ] }]
 
               response = ec2_client_ov.describe_images(Filters=public_ami_filter)
-              new_ami_name= "[ OpenVidu AMI Copy ] - " + response['Images'][0]['Name']
+              new_ami_name= "[ OpenVidu CE AMI Copy ] - " + response['Images'][0]['Name']
 
               own_ami_filter = [{ 'Name': 'name', 'Values': [new_ami_name] }]
               response = ec2_client.describe_images(Filters=own_ami_filter)
