openvidu-components: Updated doc

--- a/openvidu-components-angular/src/doc/tsconfig.doc.json
+++ b/openvidu-components-angular/src/doc/tsconfig.doc.json
@@ -4,7 +4,7 @@
 		"../../projects/openvidu-angular/src/lib/directives/**/*.ts",
 		"../../projects/openvidu-angular/src/lib/services/**/*.ts",
 		"../../projects/openvidu-angular/src/lib/models/**/*.ts",
-		"../app/openvidu-webcomponent/openvidu-webcomponent.component.ts"
+		"../app/openvidu-webcomponent/**/*.ts"
 	],
 	"exclude": [
 		"src/test.ts",
