openvidu-components: Updated docs assets

--- a/openvidu-components-angular/src/doc/.compodocrc.json
+++ b/openvidu-components-angular/src/doc/.compodocrc.json
@@ -15,5 +15,6 @@
 	"disableDependencies": true,
 	"theme": "gitbook",
 	"customFavicon": "src/favicon.ico",
-	"extTheme": "src/doc/"
+	"extTheme": "src/doc/",
+	"assetsFolder": "src/assets/images/app.gif"
 }
