openvidu-components: Updated docs and improved service method names

--- a/openvidu-components-angular/src/doc/.compodocrc.json
+++ b/openvidu-components-angular/src/doc/.compodocrc.json
@@ -16,5 +16,5 @@
 	"theme": "gitbook",
 	"customFavicon": "src/favicon.ico",
 	"extTheme": "src/doc/",
-	"assetsFolder": "src/assets/images/app.gif"
+	"assetsFolder": "src/assets/doc"
 }
