--- a/openvidu-server/deployments/enterprise/master-node/docker-compose.yml
+++ b/openvidu-server/deployments/enterprise/master-node/docker-compose.yml
@@ -84,7 +84,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     coturn:
-        image: openvidu/openvidu-coturn:6.0.0
+        image: openvidu/openvidu-coturn:7.0.0-dev1
         restart: on-failure
         network_mode: host
         env_file:
