--- a/openvidu-components-angular/projects/openvidu-angular/doc/.compodocrc.json
+++ b/openvidu-components-angular/projects/openvidu-angular/doc/.compodocrc.json
@@ -15,7 +15,6 @@
 	"disableDependencies": true,
 	"theme": "gitbook",
 	"customFavicon": "doc/favicon.ico",
-	"extTheme": "doc/",
-	"assetsFolder": "doc/assets"
+	"extTheme": "doc/"
 
 }
