--- a/openvidu-server/docker/openvidu-server-pro/Dockerfile
+++ b/openvidu-server/docker/openvidu-server-pro/Dockerfile
@@ -11,13 +11,14 @@ RUN apt-get update && apt-get install -y \
   ethtool \
   dnsutils \
 && rm -rf /var/lib/apt/lists/*
-    
+
 RUN mkdir -p /opt/openvidu /usr/local/bin/
 
-COPY openvidu-server.jar /opt/openvidu/openvidu-server.jar 
+COPY openvidu-server.jar /opt/openvidu/openvidu-server.jar
 COPY ./entrypoint.sh /usr/local/bin
 COPY ./discover_my_public_ip.sh /usr/local/bin
-    
+COPY ./coturn-shared-key.template /usr/local
+
 RUN mkdir -p /opt/openvidu/recordings && \
     chmod +x /usr/local/bin/entrypoint.sh && \
     chmod +x /usr/local/bin/discover_my_public_ip.sh
