--- a/openvidu-server/deployments/pro/aws/cfn-mkt-kms-ami.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-mkt-kms-ami.yaml.template
@@ -59,10 +59,16 @@ Resources:
                     docker-ce-cli \
                     containerd.io
 
-                # Install docker-compose
-                curl -L "https://github.com/docker/compose/releases/download/1.25.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-                chmod +x /usr/local/bin/docker-compose
-                ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+                # Install docker-compose v2
+                DOCKER_CONFIG=${DOCKER_CONFIG:-$HOME/.docker}
+                mkdir -p $DOCKER_CONFIG/cli-plugins
+                curl -SL https://github.com/docker/compose/releases/download/v2.2.3/docker-compose-linux-x86_64 -o $DOCKER_CONFIG/cli-plugins/docker-compose
+                chmod +x $DOCKER_CONFIG/cli-plugins/docker-compose
+                curl -fL https://raw.githubusercontent.com/docker/compose-switch/master/install_on_linux.sh | sh
+                curl -fL https://github.com/docker/compose-switch/releases/download/v1.0.4/docker-compose-linux-amd64 -o /usr/local/bin/compose-switch
+                chmod +x /usr/local/bin/compose-switch
+                update-alternatives --install /usr/local/bin/docker-compose docker-compose /usr/local/bin/compose-switch 99
+
               mode: "000755"
               owner: "root"
               group: "root"
