deployment: AMI 20.04 no longer uses python-pip; Only python3-pip can be installed.

--- a/openvidu-server/deployments/ce/aws/cfn-mkt-ov-ce-ami.yaml.template
+++ b/openvidu-server/deployments/ce/aws/cfn-mkt-ov-ce-ami.yaml.template
@@ -162,7 +162,7 @@ Resources:
             #!/bin/bash -x
             set -eu -o pipefail
             apt-get update && apt-get install -y \
-                python-pip python3-pip \
+                python3-pip \
                 ec2-instance-connect
             pip3 install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-py3-latest.tar.gz
 
