--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/pro/new_api_pro.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/pro/new_api_pro.conf
@@ -44,3 +44,9 @@
         deny all;
         proxy_pass http://openviduserver;
     }
+
+    location /openvidu/virtual-background {
+        {rules_acess_api}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
