deployment enterprise: Add docker sock for restarts

--- a/openvidu-server/deployments/enterprise/master-node/docker-compose.yml
+++ b/openvidu-server/deployments/enterprise/master-node/docker-compose.yml
@@ -64,6 +64,7 @@ services:
         network_mode: host
         volumes:
             - ./:/opt/openvidu
+            - /var/run/docker.sock:/var/run/docker.sock
         environment:
             - SERVER_PORT=4443
             - SERVER_SSL_ENABLED=false
