deployment enterprise: Read all .env variables so other OpenVidu parameters can be readen by the replication manager.

--- a/openvidu-server/deployments/enterprise/master-node/docker-compose.yml
+++ b/openvidu-server/deployments/enterprise/master-node/docker-compose.yml
@@ -65,6 +65,8 @@ services:
         volumes:
             - ./:/opt/openvidu
             - /var/run/docker.sock:/var/run/docker.sock
+        env_file:
+            - .env
         environment:
             - SERVER_PORT=4443
             - SERVER_SSL_ENABLED=false
